# edo-demo

./: .adr-dir  .bazelrc  .clang-format  .clang-tidy  .github.bazelrc  .gitignore  .local.bazelrc  .pre-commit-config.yaml  BUILD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOD.md  LICENSE  Makefile  NOTICE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  WORKSPACE  WORKSPACE.bazel  python_configure.bzl  testme.py  workspace_00.bzl  workspace_01.bzl  workspace_cpp.bzl  workspace_docker.bzl  workspace_go.bzl  workspace_python.bzl
.bazel/bazelrc/: gh.codespace.bazelrc  gh.workflow.bazelrc
.bazel/docker/: BUILD  configure.bzl
.bazel/golang/: configure.bzl
.bazel/ros/: BUILD  gen_ros_workspace_bzl.py  generate_ros_workspace.py  message_generation.bzl  path_utils.bzl  repository_rules.bzl
.bazel/workspace/: workspace_cpp.bzl  workspace_global.bzl  workspace_ros.bzl
.devcontainer/: Dockerfile  devcontainer.json  first-run-notice.txt
.devcontainer/build_scripts/: apt_installs.sh  common_debian.sh  docker_in_docker_debian.sh  gem_installs.sh  go_installs.sh  pip_installs.sh  ros_install.sh  ros_noetic_install.sh  user_installs.sh  vscode_user_specific_installs.sh
.devcontainer/install-scripts/: npm-installs.sh  ros2-install.sh  user-installs.sh
.devcontainer/library-scripts/: common-debian.sh  docker-in-docker-debian.sh
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  codeql_analysis.yml  functional-test.yml  functional_test.yml  publish-github-pages.yml
.make/bazel/: Makefile
.make/behave/: Makefile
.make/changelog/: Makefile
.make/docker/: Makefile
.make/ros/: Makefile  build.sh  test.sh
debian/: BUILD  description
devcontainer.keep/: Dockerfile  base.Dockerfile
docs/: Gemfile  _config.yml  architectural-decision-record.md  architectural_decision_record.md  azure_iot.md  bazel.md  business_model_canvas.md  clients_and_partners.md  github_codespaces.md  ide_cicd.md  index.md  industry_4.0.md  reference_links.md  release_process.md  research_and_development.md  ros.md  spot.md  spot_micro.md
features/: BUILD  BUILD.bazel  bdd.bzl  simple.feature
spot_micro/: README.md
(+661 files in other folders)
