#--------------------------------------------------------------------------------------------------------------
###############################################################################################################
# Workspace configuration
###############################################################################################################
#--------------------------------------------------------------------------------------------------------------

workspace(name = "edo-demo")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#--------------------------------------------------------------------------------------------------------------
###############################################################################################################
# C++ configuration
###############################################################################################################
#--------------------------------------------------------------------------------------------------------------

#--------------------------------------------------------------------------------------------------------------
# http archive repositories
#--------------------------------------------------------------------------------------------------------------

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-609281088cfefc76f9d0ce82e1ff6c30cc3591e5",
    urls = ["https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip"],
)

#--------------------------------------------------------------------------------------------------------------
# Local repositories
#--------------------------------------------------------------------------------------------------------------

# apps --------------------------------------------------------------------------------------------------------

new_local_repository(
    name = "smoke_test",
    path = "apps/smoke_test/src",
    build_file = "apps/smoke_test/src/BUILD.bazel",
)
